--- a/SAP.WPF/App.config
+++ b/SAP.WPF/App.config
@@ -15,7 +15,7 @@
                 <value />
             </setting>
             <setting name="Valyuta" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
         </SAP.WPF.Properties.Settings>
     </userSettings>
