--- a/SAP.WPF/Properties/Settings.settings
+++ b/SAP.WPF/Properties/Settings.settings
@@ -11,8 +11,8 @@
     <Setting Name="WindowS" Type="System.Int32" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="Valyuta" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="Valyuta" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
